# satellite_condition

./: .gitignore  .gitmodules  CMakeLists.txt  client.cpp  client.h  main.cpp
configmanager/: configmanager.cpp  configmanager.h  jsonagent.cpp  jsonagent.h
logger/: conf_log.json  logger.cpp  logger.h  logger_boost.h  logger_boost_qtwrap.h
ws_client/: main.cpp  ws_client.pro
